# Ftrl-FFM

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  README_zh.md
cmake/: FindZstd.cmake
data/: libffm_data.txt  libsvm_data.txt  sample_data.txt
python/: dataset.py  download_data.py  generate_data.py  metrics.py  transform_data.py  utils.py
src/: CMakeLists.txt  ftrl_task.h  lr_predict.cpp  lr_train.cpp  main.cpp  train.cpp
src/FTRL/: ftrl_model.h  ftrl_trainer.h
src/compression/: CMakeLists.txt  compress.cpp  file_ops.c  file_ops.h
src/concurrent/: CMakeLists.txt  pc_task.cpp
src/data/: CMakeLists.txt  parser.cpp  reader.cpp
src/eval/: CMakeLists.txt  evaluate.cpp  evaluate.h  evaluator.h  loss.h
src/include/compression/: compress.h
src/include/concurrent/: pc_task.h  thread_pool.h
src/include/data/: parser.h  reader.h  sample.h
src/include/eval/: evaluate.h  loss.h
src/include/model/: ffm.h  fm.h  ftrl_model.h  ftrl_offline.h  ftrl_online.h  ftrl_unit.h  lr.h
src/include/task/: ftrl_offline.h  ftrl_online.h  ftrl_task.h
src/include/threading/: asynchronous.h  pc_task.h  thread_pool.h
src/include/train/: ftrl_trainer.h
src/include/utils/: cmd_option.h  types.h  utils.h
src/learn/: ftrl_learn.h
src/model/: CMakeLists.txt  ffm.cpp  fm.cpp  ftrl_model.cpp  ftrl_model.h  ftrl_offline.cpp  ftrl_offline.h  ftrl_online.cpp  ftrl_online.h  ftrl_predictor.h  ftrl_trainer.h  ftrl_unit.h  lr.cpp
src/process/: sample.h
src/reader/: file_utils.h  parser.h  reader.h  sample.h
src/sample/: lr_sample.h
src/task/: CMakeLists.txt  ftrl_offline.cpp  ftrl_online.cpp  ftrl_task.cpp
src/threading/: CMakeLists.txt  pc_task.cpp  pc_task.h  pc_threading.cpp  pc_threading.h  test_task.cpp  test_task.h  thread_pool.h
src/train/: CMakeLists.txt  ftrl_trainer.cpp
src/utils/: CMakeLists.txt  cmd_option.cpp  cmd_option.h  cmd_options.h  common.h  utils.cpp  utils.h
tests/: CMakeLists.txt  common.h  test_data.cpp  test_model.cpp  test_task.cpp  test_utils.cpp
